--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,12 @@
     font-family: 'Mulish', sans-serif;
 }
 
+.description {
+    color: #FFF;
+    font-size: 1rem;
+    font-weight: 400;
+}
+
 
 
 
@@ -32,15 +38,17 @@ nav {
     padding-left: 5px;
 }
 
-.special{
+.special {
     color: #FF5400;
 }
-.nav-items{
+
+.nav-items {
     width: 50%;
     display: flex;
     justify-content: space-around;
 }
-.nav-items a{
+
+.nav-items a {
     text-decoration: none;
     color: #424247;
     font-size: 1.2rem;
@@ -48,7 +56,106 @@ nav {
 
 }
 
+/* Banner related styles */
 
+.banner {
+    background-image: linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%), url(/images/Group\ 13\ \(1\)\ \(1\).png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    border-radius: 16px;
+    max-width: 1170px;
+    margin: 0 auto;
+    width: 100%;
+    
+}
+
+.container {
+    text-align: center;
+}
+
+.banner-tittle {
+    color: #FFF;
+    font-size: 4rem;
+    font-weight: 800;
+    padding-top: 100px;
+}
+
+.input-containers{
+    display:flex;
+    justify-content: center;
+    border-radius: 8px;
+    /* background:rgba(255, 255, 255, 0.30); */
+    padding: 5px;
+    gap: 5px
+    
+}
+
+.inputs {
+    background: #FFF;
+    padding: 16px 60px 16px 16px;
+    font-size: 1rem;
+    color: rgba(19, 19, 24, 0.50);
+    border-radius: 8px;
+    background: #FFF;
+    border: none;
+    margin-bottom: 106px;
+    
+    
+    
+}
+
+.primary-btn {
+    border-radius: 8px;
+    background: #FF5400;
+    padding: 16px 50px;
+    color: #FFF;
+    font-size: 1rem;
+    font-weight: 700;
+    border: none;
+}
+.primary-btn img{
+    margin-right: 5px;
+}
+
+/* popular section related styles */
+
+.popular{
+    margin-top: 80px;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    max-width: 1170px;
+    margin: 0 auto;
+    padding-top: 100px;
+}
+.tittles{
+    color: #131318;
+    font-size: 2.5rem;
+    font-weight: 800;
+}
+.description-tour{
+    color: rgba(19, 19, 24, 0.70);
+    font-size: 1rem;
+    width: 600px;
+}
+.tour-end{
+    color: #5A5A5D;
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+/* Destination section related styles */
+
+.destination{
+    text-align: center;
+    margin-top: 100px;
+}
+.destination .tour-end{
+    width: 800px;
+    margin: 0 auto;
+}
 
 
 
@@ -67,16 +174,62 @@ nav {
 /* Small devices styles */
 
 @media screen and (max-width: 600px) {
-    .nav-container{
+    .nav-container {
         width: 90%;
     }
-    .nav-items{
+
+    .nav-items {
         display: none;
     }
-    .nav-tittle{
+
+    .nav-tittle {
         font-size: 1.5rem;
     }
-    
+
+    .banner-tittle {
+        font-size: 1.5rem;
+    }
+
+    .description {
+        font-size: 0.8rem;
+        width: 90vw;
+        margin-left: 10px;
+    }
+
+    .input-containers {
+        flex-direction: column;
+        align-items: center;
+        
+    }
+    .inputs{
+        padding: 0 0 0 5px;
+        width: 250px;
+        height: 50px;
+        /* gap: px; */
+    }
+
+    .primary-btn{
+        width: 250px;
+        height: 50px;
+    }
+    .popular{
+        flex-direction: column;
+        align-items: center;
+    }
+    .popular-img img{
+        width: 100%;
+        
+        
+    }
+    .description-tour, .tour-end{
+        width: 300px;
+    }
+    .tittles{
+        font-size: 1.5rem;
+    }
+    .destination .tour-end{
+        width: 300px;
+    }
 }
 
 
@@ -84,8 +237,8 @@ nav {
 /* Styles for larger devices */
 
 @media screen and (min-width: 992px) {
-    .ham-img{
+    .ham-img {
         display: none;
     }
-    
+
 }
