--- a/styles/style.css
+++ b/styles/style.css
@@ -68,7 +68,7 @@ nav {
     max-width: 1170px;
     margin: 0 auto;
     width: 100%;
-    
+
 }
 
 .container {
@@ -82,14 +82,13 @@ nav {
     padding-top: 100px;
 }
 
-.input-containers{
-    display:flex;
+.input-containers {
+    display: flex;
     justify-content: center;
     border-radius: 8px;
     /* background:rgba(255, 255, 255, 0.30); */
     padding: 5px;
     gap: 5px
-    
 }
 
 .inputs {
@@ -101,9 +100,9 @@ nav {
     background: #FFF;
     border: none;
     margin-bottom: 106px;
-    
-    
-    
+
+
+
 }
 
 .primary-btn {
@@ -115,13 +114,14 @@ nav {
     font-weight: 700;
     border: none;
 }
-.primary-btn img{
+
+.primary-btn img {
     margin-right: 5px;
 }
 
 /* popular section related styles */
 
-.popular{
+.popular {
     margin-top: 80px;
     display: flex;
     justify-content: space-between;
@@ -130,17 +130,20 @@ nav {
     margin: 0 auto;
     padding-top: 100px;
 }
-.tittles{
+
+.tittles {
     color: #131318;
     font-size: 2.5rem;
     font-weight: 800;
 }
-.description-tour{
+
+.description-tour {
     color: rgba(19, 19, 24, 0.70);
     font-size: 1rem;
     width: 600px;
 }
-.tour-end{
+
+.tour-end {
     color: #5A5A5D;
     font-size: 1rem;
     font-weight: 400;
@@ -148,13 +151,50 @@ nav {
 
 /* Destination section related styles */
 
-.destination{
+.destination {
     text-align: center;
     margin-top: 100px;
 }
-.destination .tour-end{
+
+.destination .tour-end {
     width: 800px;
     margin: 0 auto;
+    padding-bottom: 20px;
+}
+
+.destination-img .row {
+    width: 100%;
+    height: 100%;
+    margin-top: 10px;
+}
+
+.row {
+    display: flex;
+    justify-content: center;
+    flex-shrink: 0;
+    gap: 20px;
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+.resize1 {
+    width: 550px;
+    height: 300px;
+}
+
+.resize2{
+    width: 580px;
+    height: 300px;
+}
+
+/* choose us section related styles */
+.choose-us{
+    text-align: center;
+}
+.choose-descrip{
+    width: 700px;
+    margin: 0 auto;
+
 }
 
 
@@ -199,37 +239,52 @@ nav {
     .input-containers {
         flex-direction: column;
         align-items: center;
-        
+
     }
-    .inputs{
+
+    .inputs {
         padding: 0 0 0 5px;
         width: 250px;
         height: 50px;
         /* gap: px; */
     }
 
-    .primary-btn{
+    .primary-btn {
         width: 250px;
         height: 50px;
     }
-    .popular{
+
+    .popular {
         flex-direction: column;
         align-items: center;
     }
-    .popular-img img{
+
+    .popular-img img {
         width: 100%;
-        
-        
+
+
     }
-    .description-tour, .tour-end{
+
+    .description-tour,
+    .tour-end {
         width: 300px;
     }
-    .tittles{
+
+    .tittles {
         font-size: 1.5rem;
     }
-    .destination .tour-end{
+
+    .destination .tour-end {
         width: 300px;
     }
+    .row{
+        flex-direction: column;
+        
+    }
+    .row img{
+        width: 100%;
+    }
+
 }
 
 
